--- a/.github/workflows/ai-antipattern.yml
+++ b/.github/workflows/ai-antipattern.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install semgrep==1.143.0 requests==2.31.0 PyGithub==2.1.1
+          pip install semgrep>=1.45.0 requests==2.31.0 PyGithub==2.1.1
 
       - name: Run Semgrep (Diff Optimized Debug)
         run: python semgrep_diff_scan.py
