--- a/.github/workflows/ai-antipattern.yml
+++ b/.github/workflows/ai-antipattern.yml
@@ -16,13 +16,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 2
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
+      # Cache pip dependencies so we don't reinstall every run
       - name: Cache pip packages
         uses: actions/cache@v4
         with:
@@ -36,6 +37,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # Running Semgrep from official action (no need to pip install Semgrep)
       - name: Run Semgrep (Diff Optimized Debug)
         run: python semgrep_diff_scan.py
 
