--- a/.github/workflows/ai-antipattern.yml
+++ b/.github/workflows/ai-antipattern.yml
@@ -16,20 +16,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Required for diff detection and merge-base
+          fetch-depth: 0
 
-      - name: Fetch base branch
-        run: git fetch origin main
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        id: cache-pip
         with:
-          python-version: '3.11'
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-      - name: Install Dependencies
+      # Better: put your deps in a requirements.txt
+      - name: Install Dependencies if needed
         run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade --force-reinstall semgrep requests==2.31.0 PyGithub==2.1.1
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run Semgrep (Diff Optimized Debug)
         run: python semgrep_diff_scan.py
