--- a/.github/workflows/ai-antipattern.yml
+++ b/.github/workflows/ai-antipattern.yml
@@ -26,21 +26,23 @@ jobs:
           path: ~/.local/bin/semgrep
           key: semgrep-binary-v1
 
-      # Download Semgrep only if not cached
+      # Install Semgrep if not cached
       - name: Download Semgrep binary if needed
         if: steps.cache-semgrep.outputs.cache-hit != 'true'
         run: |
+          SEMGREP_VERSION=1.67.0
           mkdir -p ~/.local/bin
-          curl -L -o ~/.local/bin/semgrep \
-            https://github.com/returntocorp/semgrep/releases/latest/download/semgrep-linux-amd64
+          curl -L \
+            -H "User-Agent: semgrep-ci" \
+            -o ~/.local/bin/semgrep \
+            "https://github.com/returntocorp/semgrep/releases/download/v${SEMGREP_VERSION}/semgrep-linux-amd64"
           chmod +x ~/.local/bin/semgrep
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      # Ensure Semgrep is in PATH
+      # Ensure PATH has Semgrep location
       - name: Add Semgrep to PATH
         run: echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      # Cache pip for PyGithub only
+      # Cache pip deps (only PyGithub)
       - name: Cache pip dependencies
         uses: actions/cache@v4
         id: cache-pip
@@ -54,7 +56,9 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run Semgrep scan
-        run: ~/.local/bin/semgrep --version && python semgrep_diff_scan.py
+        run: |
+          semgrep --version
+          python semgrep_diff_scan.py
 
       - name: AI Analysis
         run: python post_to_hf.py
