--- a/.github/workflows/ai-antipattern.yml
+++ b/.github/workflows/ai-antipattern.yml
@@ -18,16 +18,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Fetch base branch
-        run: git fetch origin main
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      # Cache pip dependencies
-      - name: Cache pip packages
+      - name: Cache pip dependencies
         uses: actions/cache@v4
         id: cache-pip
         with:
@@ -36,8 +27,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: Install Dependencies
+      # Better: put your deps in a requirements.txt
+      - name: Install Dependencies if needed
         run: |
+          pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run Semgrep (Diff Optimized Debug)
