--- a/.github/workflows/ai-antipattern.yml
+++ b/.github/workflows/ai-antipattern.yml
@@ -18,20 +18,29 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Cache pip dependencies
+      # Cache the entire Python site-packages directory
+      - name: Cache Python dependencies
         uses: actions/cache@v4
-        id: cache-pip
+        id: cache-deps
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          path: |
+            ~/.cache/pip
+            ~/.local/lib/python3.*/site-packages
+            ~/.local/bin
+          key: ${{ runner.os }}-python-${{ hashFiles('requirements.txt') }}-v1
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-python-
 
-      # Better: put your deps in a requirements.txt
-      - name: Install Dependencies if needed
+      # Only install if cache miss
+      - name: Install Dependencies
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: |
-          pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install --no-compile --prefer-binary --disable-pip-version-check -r requirements.txt
+
+      # Verify installation (runs even on cache hit)
+      - name: Verify Dependencies
+        run: |
+          python -c "import semgrep; import github; import requests; print('Dependencies loaded successfully')"
 
       - name: Run Semgrep (Diff Optimized Debug)
         run: python semgrep_diff_scan.py
